--- a/UnoAI/UnoAI.fsproj
+++ b/UnoAI/UnoAI.fsproj
@@ -14,16 +14,18 @@
 		<Compile Include="Bot.fs" />
 		<Compile Include="BotRunner.fs" />
 		<Compile Include="Bots\BotUtils.fs" />
+		<Compile Include="Bots\CardCounting.fs" />
 		<Compile Include="Bots\RandomBot.fs" />
 		<Compile Include="Bots\GreedyBot.fs" />
 		<Compile Include="Bots\DiversityBot.fs" />
 		<Compile Include="Bots\CardRankingBot.fs" />
 		<Compile Include="Bots\MixBot.fs" />
+		<Compile Include="Bots\MixBot2.fs" />
 		<Compile Include="Bots\ScoreBot.fs" />
-		<Compile Include="Bots\CardCounting.fs" />
 		<Compile Include="Bots\CardCountingBot.fs" />
 		<Compile Include="Optimization\CardRankingBotOptimization.fs" />
 		<Compile Include="Optimization\MixBotOptimization.fs" />
+		<Compile Include="Optimization\MixBot2Optimization.fs" />
 		<Compile Include="Optimization\ScoreBotOptimization.fs" />
 		<Compile Include="Optimization\CardCountingBotOptimization.fs" />
 		<Compile Include="Program.fs" />
